--- a/config.env
+++ b/config.env
@@ -18,7 +18,7 @@ AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = "True"
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = "https://schumwayvod.schumway.workers.dev/0:/"
+INDEX_URL = "https://schumwayvod.schumway.workers.dev/0:"
 STATUS_LIMIT = ""  # Recommended limit is 4
 # Leech
 TG_SPLIT_SIZE = ""  # leave it empty for max size (2GB)
